--- a/frontend/index.html
+++ b/frontend/index.html
@@ -40,6 +40,7 @@
     <div class="home-container">
       <section id="#home">
         <div class="content">
+          <!-- Logotipo -->
           <video autoplay loop muted playsinline>
             <source src="./src/assets/Rio2C 2025 _Logo Media LAB _1_  logo animada.mp4" type="video/mp4">
           </video>
