--- a/frontend/index.html
+++ b/frontend/index.html
@@ -45,10 +45,14 @@
             <source src="./src/assets/Rio2C 2025 _Logo Media LAB _1_  logo animada.mp4" type="video/mp4">
           </video>
 
-          <h5>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptate fugit vitae architecto voluptas quae praesentium ratione doloribus, reiciendis alias aliquam quod est harum vel vero dolorum iste repudiandae. Reiciendis, corrupti?</h5>
-          <h6>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellendus, distinctio. Voluptatum id minus facere eligendi laudantium delectus adipisci ab doloribus ipsum veritatis, doloremque eveniet asperiores reprehenderit. Labore itaque veritatis commodi!</h6>
+          <!-- Informações -->
+          <h5>É o laboratório experimental de midias da Escola Superios de Desenho Industrial (ESDI), dedicado à pesquisa e experimentação na interseção entre desing, arte e tecnologia.</h5>
+          <h5>Promover práticas experimentais que aproximem design, arte e tecnologia, conectando a comunidade acadêmica com a sociedade por meio de projetos colaborativos e interativos.</h5>
         </div>
       </section>
     </div>
   </body>
+  <footer>
+    <img src="./src/assets/uerj.png" alt="">
+  </footer>
 </html>
